# u-cs6963-sp21

./: .gitignore  README.md  setup.cfg
task1/: README.md  hie.yaml  package.yaml  stack.yaml  task1.cabal
task1/src/: BitSet.hs  Sudoku.hs  generate.hs  solve.hs
task1/src/Algorithm/: SudokuSolver.hs
task1/src/Data/: BitSet.hs  Sudoku.hs
task1/test/: SudokuSpec.hs
task1/test/Algorithm/: SudokuSolverSpec.hs
task2/: README.md  hie.yaml  package.yaml  santorini.cabal  stack.yaml
task2/scripts/: launcher.py  play.sh
task2/src/: player.hs
task2_ml/: README.md  gamestate.py  judge.py  run_exp.py  search.py
task3/: .hlint.yaml  README.md  hie.yaml  package.yaml  santorini.cabal  stack.yaml
task3/log/: t-2021-03-06.err
task3/scripts/: environ.sh  launcher.py  play.sh  play_all_cards.sh  split_tn.py  summarize_tn.py  test_input.txt  test_input2.txt  wrapper.sh  wrapper_to.sh
task3/src/: bench.hs  player.hs
task3_bench/: bench.cabal  hie.yaml  package.yaml
task3_bench/log/: bench.html
task3_bench/src/: bench.hs
task4/: .gitignore  README.md
task4/cpp/: CMakeLists.txt  CMakeLists_submit.txt  Makefile
task4/cpp/src/: exact.cpp  util.hpp
task4/cpp/src/cep/: branch.hpp  graph.hpp  vmap.hpp
task4/cpp/src/data/: bitmap.hpp  graph.hpp  matrix.hpp
task4/cpp/src/io/: parser.cpp  parser.hpp
task4/cpp/src/job/: scheduler.hpp
task4/cpp/test/: CMakeLists.txt  branch_test.cpp  parser_test.cpp
task4/cpp/test/data/: bitmap_test.cpp  graph_test.cpp  matrix_test.cpp
task4/haskell/: README.md  cluster-editing.cabal  package.yaml  stack.yaml
(+44 files in other folders)
